Logic for choosing expected positive names

--- a/rssac-047.mkd
+++ b/rssac-047.mkd
@@ -189,13 +189,13 @@ The individual measurement responses will be marked either correct or incorrect.
 
 The RSSAC recognizes that there are limitations to this metric because the vantage points are measuring a small number of root server instances, from known source IP addresses, with no detection of on-path attackers. Another potential limitation may arise in cases when root server instances are started up with older versions of the zone saved on disk. Typically, when name servers start up they will use any saved zone data and then quickly check for a newer version from the master server. If a correctness query happens during this short window of time between startup and zone refresh, stale data may be returned. Future improvements in the measurement system may address these and other concerns.
 
-__Measurements.__ Measurements shall be made by sending DNS queries at five-minute intervals to the RSIs. `[wca]` In each interval the transport and address type used for a particular measurement shall be chosen with uniform random probability among all combinations of IPv4/IPv6 and UDP/TCP. `[ogo]` In order to test a variety of responses, the query name and type for a particular measurement are chosen at random as described below.
+__Measurements.__ Measurements shall be made by sending DNS queries at five-minute intervals to the RSIs. `[wca]` In each interval the transport and address type used for a particular measurement shall be chosen with uniform random probability among all combinations of IPv4/IPv6 `[thb]` and UDP/TCP. `[ogo]` In order to test a variety of responses, the query name and type for a particular measurement are chosen at random as described below.
 
 For all queries, the DNSSEC OK bit is always set, `[rhe]` and the EDNS0 buffer size is set to 1220 when using UDP. `[rja]`
 
 There are two kinds of queries: expected positive and expected negative.
 
-- The expected positive queries are selected from the following RRSets from a recent root zone: ./SOA, `[njh]` ./DNSKEY, `[hmc]` ./NS, `[xca]` <any_TLD>/NS, `[max]` and <any_TLD>/DS. `[kmd]` These measurements do not query non-authoritative data directly. However, any non-authoritative data included in the Additional section of responses will be checked for correctness.
+- The expected positive queries are selected from the following RRSets from a recent root zone: `[mow]` ./SOA, `[njh]` ./DNSKEY, `[hmc]` ./NS, `[xca]` <any_TLD>/NS, `[max]` and <any_TLD>/DS. `[kmd]` These measurements do not query non-authoritative data directly. However, any non-authoritative data included in the Additional section of responses will be checked for correctness.
   - At the time this document is published, the ARPA TLD is served by many of the RSIs. From those root servers, an ARPA/NS query will return authoritative data, rather than a referral, and therefore cannot be tested for correctness as described in the checking rules below. Therefore, ARPA/NS must be excluded from the set of expected positive queries above as long as any RSI is serving ARPA authoritatively. `[unt]` Note, however, that ARPA/DS is included because it can be tested for correctness even in this scenario.
 - The expected negative queries have a name that contains random letters and a resource record type of A. The names are constructed as “www.rssac047-test.<RAND-NXD>”, `[hkc]` where <RAND-NXD> is formed by 10 ASCII letters chosen at random. `[dse]` Examples of expected negative questions are “www.rssac047-test.twxoozxmew” and “www.rssac047-test.hwzvpicwen”.
 
